# podflower

./: .cursorconfig  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEMO.md  Dockerfile  Makefile  README.md  SPEC.md  check_deployment.py  deploy_agent_engine.py  deploy_self_contained.py  deploy_simple.py  env.example  pyproject.toml  requirements.txt  simple_test_api.py
.cursor/rules/: my-custom-rules.mdc
agents/: __init__.py
agents/ad_break/: ad_break.py
agents/concat_audio/: concat_audio.py
agents/deploy_vercel/: deploy_vercel.py
agents/export_package/: export_package.py
agents/filler_removal/: filler_removal.py
agents/mastering/: mastering.py
agents/post_to_x/: post_to_x.py
agents/recorder/: recorder.py
agents/title_notes/: title_notes.py
agents/wordpress_publish/: wordpress_publish.py
assets/: README.md
pipelines/: full_workflow.py
podflower_agent/: agent.py
sample_episode/: README.md
tests/: __init__.py  test_agents.py  test_pipeline.py
